drop columns from intro sections

--- a/ActionIntro.tex
+++ b/ActionIntro.tex
@@ -1,5 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
+{\small
 
 The \emph{Pointers} here are not things to be mulled over and analysed in great depth, they're included to give us the little nudges and course corrections for our actions.
 
@@ -13,4 +13,4 @@ We need to remember what's important to us. Remember how much time we have and h
 
 We also need to remember that people will see where we spend our time and the choices made. No matter what we say they will believe what they see (and don't see). 
 
-\end{multicols}
+}
