--- a/ConfidenceIntro.tex
+++ b/ConfidenceIntro.tex
@@ -1,5 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
+{\small
 
 It's a fine line between arrogance and confidence. We need to be sure about what we're about to do but we need to remember that we're only human and we will make errors in judgement, just as we have done in the past (\S \ref{MA_MISTAKE}). 
 
@@ -14,5 +14,4 @@ Being bold enough to act in the face of that uncertainty is what we're aiming fo
 
 
 
-\end{multicols}
-\clearpage
+}
