--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -1,5 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
+{\small
 
 As hard as it can be to take action, it's even harder to maintain the level of focus we need to on the right things. To help us find the right things we should think about what impact our efforts can produce (\S \ref{ST_UTU}) and what price we'll have to pay. The sun will still hide behind the clouds on our day at the beach, the white van will still drive too close no matter how much we hope otherwise. Better to work on things we can control.  %effort vs impact
 
@@ -11,5 +11,4 @@ Maybe we should call someone who's important to us and focus soley on that for s
 
 Let's take 15 minutes. The advice and guidance on the next few pages will still be here when we get back. 
 
-\end{multicols}
-\clearpage
+}
