--- a/GenerosityIntro.tex
+++ b/GenerosityIntro.tex
@@ -1,5 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
+{\small
 
 Materially speaking, we know that it is better to help many than to live in luxury \footnote{Musonius Rufus, \cite{RLS}}, we don't need a top of the range car more than the homeless man needs the next meal. Professionally we can be equally tight fisted, grabbing at praise from our superiors and doing our peers down so we are first in line for the bonus and promotion. We don't need to do either of those things of course. Allowing others to take the credit for work we've played a part in or setting others up for success can feel like career suicide but, with time, we'll be seen as the person who brings up strong talent and the person we need on the project to make sure it's a roaring success.
 
@@ -9,5 +9,4 @@ As hard as it is, if we want to make progress towards our aims, we need to give 
 
 There's no need to harbour grudges (\S)\ref{MM_HATE}, we don't have that time to waste, but we do need to remember the times we've spoken sharply or hurtfully and we've been forgiven and pass that favour on (\S \ref{SL_GIVE} and \ref{S_DO}). 
 
-\end{multicols}
-\clearpage
+}
