--- a/HumilityIntro.tex
+++ b/HumilityIntro.tex
@@ -1,5 +1,5 @@
 \cleartorightpage
-\begin{multicols}{2}
+{\small
 
 We can't bear listening to empty claims and boasting, it's infuriating especially when people seem to be eating up the inflated claims. At times we fall foul of this behaviour ourselves, acting as though there's nothing we can learn from those around us, acting as though we have it all figured out, acting as though we know it all. No matter how masterful we are in a given area, we can be sure that there are those more accomplished than us and those who are less accomplished. In either case we should be ready to listen to them as they can both provide different and valuable view points to change our direction and improve our processes (\S \ref{MA_CHANGE}).
 
@@ -9,5 +9,5 @@ We're not immune to luck either, it's incredibly important to remember that the 
 
 If we can keep this in mind we'll be open to new ideas, we'll be more self aware and we'll chip away at our weaknesses.
 
-\end{multicols}
+}
 \cleartoleftpage
