--- a/LearningIntro.tex
+++ b/LearningIntro.tex
@@ -1,5 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
+{\small
 
 We don't know enough. We'll likely never master our respective professions, hobbies and past-times, we'll never understand how others behave and what motivates them to any meaningful level but that shouldn't stop us from trying. Quite the opposite in fact. Maintaining an open mind\llink{http://mindsetonline.com/whatisit/themindsets/index.html} is a key trait for us to make sure we're in a position where we can grow and make progress towards our aims. Getting stuck into patterns of behaviour and allowing our comfort zones to shrink is a sure way to stop progress dead in its tracks.
 
@@ -10,5 +10,4 @@ Spending some time reviewing what we would like to learn should involve not just
 
 No matter what we choose, one way we can certainly learn more is to simply read more\llink{http://ryanholiday.net/how-to-read-more-a-lot-more/} so that we make use of otherwise wasted time. 
 
-\end{multicols}
-\clearpage
+}
