--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -1,6 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
-
+{ \small
 We know how important action is, but acting rashly, without care and attention can do serious harm to ourselves and can undo the good progress we've made towards our aims.
 
 In many ways, for us at least, knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the manner in which we undertake the journey is at least as important as the desination.
@@ -14,6 +13,5 @@ Acting in good faith after a consideration of the facts and taking counsel where
 It's a lot of effort to be patient enough to maintain a level of control so that we can act correctly, we don't fly into a rage, we don't make snap judgements and we don't let ourselves be carried away by the crowd.
 
 With a little help we can be sure we're up to it.
-
-\end{multicols}
+}
 
