--- a/ResilienceIntro.tex
+++ b/ResilienceIntro.tex
@@ -1,5 +1,5 @@
 \cleardoublepage
-\begin{multicols}{2}
+{\small
 
 We can't have full control and so things won't always turn out as we'd hoped. Having the courage to pursue our goal in the face of unexpected changes of plan (\S \ref{H_CHANGE}), times of poor judgement (\S \ref{FN_TIRED}), and even after outright failures (\S \ref{NT_FAIL}) will mean that we'll still make slow progress towards our aim of a better self. 
 
@@ -11,5 +11,4 @@ To reach our goals we don't need to be the best (\S \ref{RH_DESTROY}), and in ou
 
 No matter what's happened, no matter what they've said, no matter what they've done; it's up to us how we react, it's up to us what happens next.
 
-\end{multicols}
-\clearpage
+}
