--- a/GratitudeIntro.tex
+++ b/GratitudeIntro.tex
@@ -1,5 +1,5 @@
 \cleartorightpage
-\begin{multicols}{2}
+{\small
 
 Just looking at the massively improbable set of circumstances needed to get us here in one piece we should be able to grab handfulls of gratitude from the air. We don't though, we take things for granted after a while. We forget quickly that we're lucky enough to be literate and high enough up Maslow's heirarchy of needs\llink{http://bit.ly/1BYf2Nd} to have time to focus on our better selves having ticked off the basics a long time ago. 
 
@@ -11,5 +11,4 @@ The stoics had a, seemingly, counter-intuitive routine to make sure we appreciat
 
 We know that we should behave as though this is our final day (\S \ref{RH_LIVE} and \ref{MA_LIVE}) so simply waking up provides us with a great source of gratitude for the day ahead. No matter what else happens (\S \ref{MA_TRUST}) not only will we be ready for it but we'll be thankful for the chances brought us for improving ourselves by focussing on the aims we have.
 
-\end{multicols}
-\clearpage
+}
