re-order learning section

--- a/Learning.tex
+++ b/Learning.tex
@@ -1,41 +1,53 @@
 \input{LearningIntro.tex}
 
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\smallQuote{RG_MASTERY}{You must see your attempt at attaining mastery as something necessary and positive}{Robert Greene}{}
 \smallQuote{TP_BOOK}{If I read a book and get one good idea from that \$20, then I've gotten one of the greatest deals of all time}{Tom Peters}{}
-
 \smallQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{Benjamin Franklin}{}
+\smallQuote{RH_LIVE}{Learn as if you were going to live but live as if you were going to die tomorrow.}{Edmund Rich}{}
+%Possibly much earlier though.
+%https://books.google.co.uk/books?id=95mdmyMC8SsC&dq=%22live+as+if+you+were+to+die+to-morrow%22&pg=PA147&redir_esc=y#v=onepage&q=%22live%20as%20if%20you%20were%20to%20die%20to-morrow%22&f=false
 
-
+\cleartorightpage
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
 
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
 \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful}{Michelangelo}{}{}
-\hugeQuote{RG_WORK}{never expose the sweat}{ and labor behind your poise}{Robert Greene}{}{}
+% \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
 
 
-\hugeQuote{NT_NNP}{Never nitpick a heuristic}{}{Nassim Taleb}{}{}
 
-\hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery}{ as something necessary and positive}{Robert Greene}{}{}
+% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\hugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
 
 \hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
 
 
-\smallQuote{MR_SOFT}{to let one's mind go lax is, in effect, to lose it}{Musonius Rufus}{} 
 
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\HugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong}{Bertand Russell}{}{}
+\cleartorightpage
 \HugeQuote{RH_ML}{More listening, more learning}{\newline
 	Fewer interruptions, fewer conclusions.
-}{Ryan Holiday}{MA_CHANGE}{}
-
-\hugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong}{Bertand Russell}{}{}
-
-
+}{Ryan Holiday}{MA_CHANGE}{} % maybe P_TALK
 
 %todo possibly humility 
 %cf bertrand russell learning/flowers
 \hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
 
-\hugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\hugeQuote{NT_NNP}{Never nitpick a heuristic}{}{Nassim Taleb}{}{}
 
 \hugeQuote{S_FOLLY}{Isn't it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
 
-\hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{Ryan Holiday}{}{} %TODO: check source
-
+\cleartorightpage
+\HugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
