--- a/Learning.tex
+++ b/Learning.tex
@@ -19,6 +19,8 @@
 \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful}{Michelangelo}{}{}
 % \hugeQuote{RG_WORK}{never expose the sweat}{ and labour behind your poise.}{Robert Greene}{}{}
 
+\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \newline
+\emph{On purpose}}{G. K. Nielson}{}{}
 
 
 % 
@@ -26,16 +28,14 @@
 \hugeQuote{MR_SOFT}{To let one's mind go lax}{ is, in effect, to lose it.}{Musonius Rufus}{}{}
 
 \hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
-
-
-
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
-\HugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong}{Bertand Russell}{}{}
+\HugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong.}{Bertand Russell}{}{}
 \cleartorightpage
+
 \HugeQuote{RH_ML}{More listening, more learning}{\newline
-	Fewer interruptions, fewer conclusions.
+Fewer interruptions, fewer conclusions.
 }{Ryan Holiday}{MA_CHANGE}{} % maybe P_TALK
 
 %todo possibly humility 
