re-order resilience

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -6,6 +6,8 @@
 
 \smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest}{Ryan Holiday}{}
 
+\hugeQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through}{ the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{} %RH_HMY
+
 \cleartoleftpage
 
 \smallQuote{MR_NL}{A physician who heals a few is no less a doctor than one who heals many}{Musonius Rufus}{} 
