--- a/Resilience.tex
+++ b/Resilience.tex
@@ -1,148 +1,160 @@
 \input{ResilienceIntro.tex}
 
-\cleardoublepage
+\cleartorightpage
 
 \HugeQuote{JP_STAND}{Fall seven times}{, stand eight}{Japanese Proverb}{MA_PERSIST2}{}
 
+%% calm minds
 \cleartoleftpage
 
-\smallQuote{CD_PROMISE}{Promise yourself to be so strong that nothing can disturb your peace of mind}{Christian D'Larson}{}{}
+\smallQuote{CD_PROMISE}{Promise yourself to be so strong that nothing can disturb your peace of mind.}{Christian D'Larson}{}{}
 
 \smallQuote{FN_TIRED}{When we are tired we are attacked by ideas we conquered long ago.}{Friedrich Nietzche}{}
 
 \smallQuote{CN_MEAT}{All the meat and all that it wants.}{Case, Neuromancer}{}
 
-\smallQuote{SP_FAT}{It's just fat and muscle}{}{}
-
-\cleardoublepage
+\smallQuote{SP_FAT}{It's just fat and muscle.}{}{}
 
 
+%
+%%%%%%%%%%%%%
+%TODO: position ? 
+\hugeQuote{MA_CONTROL2}{We control our own actions}{ and are responsible for them. If we act wrongly we have done serious harm to ourselves.}{Marcus Aurelius}{}{}
+
+\hugeQuote{MA_DWH}{Does what happened}{ stop you from acting with justice, generosity, self control, sanity, prudence, honesty and straight forwardness?}{Marcus Aurelius}{}{}
 
 
-\newpage
+%% haters gonna hate
+%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate.}{Taylor Swift}{MA_HATE}{}
+\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust.}{Schiller}{}{}
 
+\smallQuote{MA_SANITY}{Ambition: tying your well being to what other people say and do.\newline
+Self-indulgence: tying it to the things that happen to you.\newline
+Sanity: tying it to your own actions.}{Marcus Aurelius}{ST_UTU}{}
 
-\smallQuote{RH_EFFORT}{You control the effort not the results}{Ryan Holiday}{}{}
+\cleartorightpage
+\hugeQuote{DLP_DNA}{You don't need their approval.}{}{Danielle La Porte}{}{}
 
-\newpage
+\hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say.}{}{Marcus Aurelius}{}{}
 
-\hugeQuote{MA_CONTROL2}{We control our own actions}{ and are responsible for them.
+\hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed.\newline
+Don't feel harmed and you haven't been.}{Marcus Aurelius}{}{}
+\hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out.}{Marcus Aurelius}{}{}
 
-If we act wrongly we have done serious harm to ourselves}{Marcus Aurelius}{}{}
+\hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost used up and instead of treating yourself with respect you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
 
-\hugeQuote{MA_DWH}{Does what happened}{ stop you from acting with justice, generosity, self control, sanity, prudence, honesty and stright forwardness?}{Marcus Aurelius}{}{}
+\cleartorightpage
+\HugeQuote{LT_SANITY}{Care about what other people think}{ and you will always be their prisoner.}{Lao Tzu}{ST_UTU}{}
 
-
-\newpage
-
-\smallQuote{S_BTR}{The world loves to blacken the radiant and drag the sublime through the dust}{Schiller}{}{}
-
-\smallQuote{TS_HHH}{Haters gonna hate, hate, hate, hate, hate}{Taylor Swift}{MA_HATE}{}
-
-\clearpage
-
-\hugeQuote{DLP_DNA}{You don't need their approval}{}{Danielle La Porte}{}{}
-
-
-\hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say}{}{Marcus Aurelius}{}{}
-
-
+%%what is up to us
+%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
 
-\smallQuote{MR_UTU}{If you work hard to do what is right, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but advthey should have done.}{Musonius Rufus}{} 
+\smallQuote{MR_UTU}{If you work hard to do what is right, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but as they should have done.}{Musonius Rufus}{} 
 
+\smallQuote{RH_EFFORT}{You control the effort not the results.}{Ryan Holiday}{}{}
+
+\cleartorightpage
 \HugeQuote{ST_UTU}{Ta eph'hemin}{\newline
 Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
 
-\cleardoublepage
+%TODO: location ? 
+\hugeQuote{MA_STR}{Straight not straightened}{}{Marcus Aurelius}{}{}
+\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it}{Marcus Aurelius}{}{}
+\hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure}{Marcus Aurelius}{}{}
 
-\hugeQuote{WS_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so}{William Shakespeare}{}{}
 
-\hugeQuote{TNV_PROBLEMS}{Real difficulties can be overcome}{\newline 
-It's only the imaginary ones that are unconquerable}{Theodore N Vail}{UG_COUNT}{}
+%% observation vs perception
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\hugeQuote{WS_PROBLEMS}{Nothing either good nor bad}{ but thinking makes it so.}{William Shakespeare}{}{}
 
-\hugeQuote{RH_PROBLEMS}{Problems are rarely as bad as we think they are}
-{, or rather, they are precisely as bad as we think they are}{Ryan Holiday}{MA_JUDGE}{}
+\hugeQuote{TNV_PROBLEMS}{Real difficulties can be overcome.}{\newline 
+It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}{}
 
-\hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now}{Marcus Aurelius}{}{}
+\hugeQuote{RH_PROBLEMS}{Problems are rarely as bad as we think they are}{, or rather, they are precisely as bad as we think they are.}{Ryan Holiday}{MA_JUDGE}{}
 
-\newpage
+\hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
 
-\hugeQuote{RH_ENDURE}{See things for what they are,}{\newline
-do what we can,\newline
-endure what we must}{Ryan Holiday}{}{}
+% \hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must}{Ryan Holiday}{}{}
 
+
+%% Endure
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\cleartoleftpage
 \hugeQuote{S_ENDURE}{Not to give in}{to adversity.\newline
 Not to trust prosperity.\newline \newline
-And always take note of Fortune's habit of behaving exactly as she pleases}{Seneca}{}{}
+And always take note of Fortune's habit of behaving exactly as she pleases.}{Seneca}{}{}
 
-\cleardoublepage
+% \hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
 
-\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{H_CHANGE}{}
-
-\clearpage
-
-\smallQuote{JB_ALONE}{All of our unhappiness comes from our inability to be alone}{Jean de la Brugere}{}{}
-\smallQuote{GVG_ALONE}{A bore is someone who deprives you of solitude without providing you with company}
-{Gian Vincenzo Gravina}{}{}
-\smallQuote{RG_ALONE}{Strive to keep yourself free from unnecessary entanglements and alliances}{Robert Greene}{}{}
-
-\smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him}{Arthur Schopenhauer}{} 
-
-\clearpage
-
-\hugeQuote{A_ALONE}{Happiness depends on ourselves}{}{Aristotle}{}{}
-
-\hugeQuote{RWE_ALONE}{Nothing can bring you peace but yourself.}{\newline
-Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}{}
-
-\hugeQuote{MA_ALONE}{Everyone gets one life.}{ Your's is almost up and instead of treating yourself with respect
-you have entrusted your happiness to others.}{Marcus Aurelius}{}{}
-
-\clearpage
-
-
-\hugeQuote{LT_CH}{He who conquers others is strong}{, he who conquers himeself is mighty}{Lao Tzu}{}{}
-
-
-\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success}{Confucius}{}
-
-
-\smallQuote{PPPPP}{Proper planning prevents piss poor performance}{}{CF_SUCCESS}
-
-\hugeQuote{OS_OPTIMISM}{Optimism is cowardice}{}{Oswald Spengler}{}{}
-\hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
-\hugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
-
-\hugeQuote{MA_PERSIST1}{So keep at it}{ until it's fully digested. A strong stomach digests whatever it eats. A blazing fire takes whatever you throw on it and makes light and flame.}{Marcus Aurelius}{CP_FAIL}{}
-
-\hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{\newline
-Sometimes courage is the quiet voice at the end of the day whispering "I will try again tomorrow"}{Mary Anne Radmach}{MA_PERSIST2}{}
+\hugeQuote{MAR_PERSIST}{Courage doesn't always roar.}{ Sometimes courage is the quiet voice at the end of the day whispering: \newline "I will try again tomorrow."}{Mary Anne Radmach}{CP_FAIL}{}
 
 \hugeQuote{MA_PERSIST2}{Disgraceful}{ for the soul to give up while the body is still going strong}{Marcus Aurelius}{}{}
 
-\cleardoublepage
+\cleartoleftpage
+\hugeQuote{H_CHANGE}{Change is the only constant in life.}{}{Heraclitus}{}{}
 
+\hugeQuote{JM_CHANGE}{You can suffer}{ the pain of change or suffer remaining the way you are.}{Joyce Meyer}{}{}
 
+\cleartorightpage
+\HugeQuote{JKZ_ENDURE}{You can't stop the waves}{ but you can learn how to surf}{Jon Kabat Zin}{H_CHANGE}{}
 
-\hugeQuote{MA_HARM1}{Choose not to be harmed}{ and you won't feel harmed\newline
-Don't feel harmed and you haven't been}{Marcus Aurelius}{}{}
-\hugeQuote{MA_HARM2}{It can ruin your life}{ only if it ruins your character. Otherwise it cannot harm you. Inside or out}{Marcus Aurelius}{}{}
+%% Solitude
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\smallQuote{JB_ALONE}{All of our unhappiness comes from our inability to be alone.}{Jean de la Brugere}{}{}
+% \smallQuote{GVG_ALONE}{A bore is someone who deprives you of solitude without providing you with company}{Gian Vincenzo Gravina}{}{}
+% \smallQuote{RG_ALONE}{Strive to keep yourself free from unnecessary entanglements and alliances.}{Robert Greene}{}{}
 
-\smallQuote{RG_TRUST}{Trust yourself more and others less}{Robert Greene}{}
-\smallQuote{WS_TRUST}{Love all\newline
-Trust a few\newline
-Do wrong to none}{William Shakespeare}{}
+\smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him.}{Arthur Schopenhauer}{} 
+% \smallQuote{RWE_ALONE}{Nothing can bring you peace but yourself.\newline
+% Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
+\smallQuote{LT_CH}{He who conquers others is strong, he who conquers himself is mighty.}{Lao Tzu}{}{}
+
+\smallQuote{H_TRAVEL}{It is reason and wisdom which take away cares not places affording views over the sea}{Horace}{}
+
+\cleartorightpage
+\HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
+
+%% planning for failure and NV
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
+\smallQuote{CF_SUCCESS}{Success depends on previous preparation, and without such preparation there can be no success}{Confucius}{}
+
+\smallQuote{PPPPP}{Proper planning prevents piss poor performance}{}{}
+
+\cleartorightpage
+\hugeQuote{OS_OPTIMISM}{Optimism is cowardice}{}{Oswald Spengler}{}{}
+\hugeQuote{HOPE}{Hope is a poor hedge}{}{Erik R. Sirri}{}{2007, but likely earlier}
+
+\cleartoleftpage
+\HugeQuote{HA_PREPARE}{This is the precept by which I have lived}{:\newline
+Prepare for the worst,\newline 
+expect the best \newline
+and take what comes.}{Hannah Ardent}{}{}
+
+\cleartorightpage
+\HugeQuote{SP_LUCK}{Preparation}{ not luck}{}{}{}
+
+%% mentors
+%%%%%%%%%%%%%%%%%%
+
+\cleartoleftpage
+\smallQuote{RG_TRUST}{Trust yourself more and others less.}{Robert Greene}{}
+\smallQuote{WS_TRUST}{Love all.\newline
+Trust a few.\newline
+Do wrong to none.}{William Shakespeare}{}
 %TODO: check w/maddie for wording 
-%\smallQuote{MI_TRUST}{You'll get three mentors you can trust.}{Madalina Idomir}{from her teacher, but we'll share the credit.}
+%\smallQuote{MI_TRUST}{You'll get three mentors you can trust.}{Madalina Idomir}{from her teacher, but we'll share the credit (\S \ref{HT_CREDIT}).}
 
+%% Luck and Fates
 
-
-
-\HugeQuote{MA_LUCK2}{I was once s fortunate man}{, then fortune deserted me.\newline
-\newline
-But true good fortune is what you make for yourself.
+\cleartorightpage
+\HugeQuote{MA_LUCK2}{I was once a fortunate man}{, then fortune deserted me but true good fortune is what you make for yourself.
 
 Good fortune:
 \begin{itemize}
@@ -152,48 +164,22 @@ Good fortune:
 \end{itemize}}
 {Marcus Aurelius}{E_LUCK}{}
 
+%% judgement
+%%%%%%%%%%%%%%%%%%%%%%%
 
-\hugeQuote{MA_SANITY}{Ambition}{: tying your well being to what other people say and do\newline
-Self-indulgence: tying it to the things that happen to you\newline
-Sanity: tying it to your own actions}{Marcus Aurelius}{ST_UTU}{}
+\hugeQuote{MA_NOW3}{Objective judgment}{ now, at this very moment.
 
+Unselfish action now, at this very moment.
 
+Willing acceptance of all external events now, at this very moment.
 
-\hugeQuote{MA_STR}{Straight not straightened}{}{Marcus Aurelius}{}{}
-\hugeQuote{MA_MIND1}{What is outside my mind}{ means nothing to it}{Marcus Aurelius}{}{}
-\hugeQuote{MA_MIND2}{The mind without passions}{ is like a fortress. No place is more secure}{Marcus Aurelius}{}{}
-
-
-\hugeQuote{MA_NOW3}{Objective judgment}{ now, at this very moment.\newline
-Unselfish action now, at this very moment.\newline
-Willing acceptance of all external events now, at this very moment.\newline
 That's all you need}{Marcus Aurelius}{}{}
 
 \hugeQuote{MA_JUDGE}{It is we who generate the judgments}{ inscribing them on ourselves}{Marcus Aurelius}{}{}
 
 \hugeQuote{WD_JUDGE}{When you judge another}{ you do not define them, you define yourself.}{Wayne Dyer}{}{}
 
-\hugeQuote{LT_SANITY}{Care about what other people think}{ an you will always be their prisoner}{Lao Tzu}{ST_UTU}{}
-
-
-\hugeQuote{H_TRAVEL}{It is reason and wisdom which take away cares}{\newline
-not places afording views over the sea}{Horace}{A_ALONE}{}
-
-\hugeQuote{GKN_WORK}{Successful people are not gifted}{; they just work hard, then succeed. \newline
-\emph{On purpose}}{G. K. Nielson}{M_WORK}{}
-
-
-
-\hugeQuote{H_CHANGE}{Change is the only constant in life}{}{Heraclitus}{}{}
-
-\hugeQuote{JM_CHANGE}{You can suffer}{ the pain of change or suffer remaining the way you are.}{Joyce Meyer}{}{}
-
-
-\hugeQuote{RG_CONFLICT}{The more conflicts and difficult situations you put yourself through}{ the more battle tested your mind will be.}{Robert Greene}{RH_RAW}{}
-
-\HugeQuote{HA_PREPARE}{This is the precept by which I have lived}{:\newline
-Prepare for the worst, expect the best and take what comes.}{Hannah Ardent}{}{}
-
-\hugeQuote{TT_BURDEN}{The burden is equal to the strength of the horse}{}{The Talmud}{}{}
+\cleartorightpage
+\HugeQuote{TT_BURDEN}{The burden is equal to the strength of the horse.}{}{The Talmud}{}{}
 
 
