add quote package

--- a/Confidence.tex
+++ b/Confidence.tex
@@ -7,7 +7,7 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 \hugeQuote{AN_COURAGE}{Life shrinks or expands}{ in proportion to one's courage.}{Anais Nin}{JKZ_ENDURE}{}
 
 \hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{\newline
-"I'm fine as I am"}{School of Life}{}
+\say{I'm fine as I am}}{School of Life}{}
 {On confidence\llink{http://www.thebookoflife.org/on-confidence/}} %also include the more confident notes maybe 
 
 \hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
