--- a/Focus.tex
+++ b/Focus.tex
@@ -53,7 +53,7 @@ See: efficacy hacks\llink{http://bit.ly/1EDPjUQ} and a not to do list\llink{http
 }
 
 \HugeQuote{MA_DL}{If you seek tranquillity, do less}{ or (more accurately) do what's essential because most of what we say and do is not essential.\newline
-Ask yourself at every moment "is this necessary?"}
+Ask yourself at every moment \say{is this necessary?}}
 {Marcus Aurelius}{}{}
 
 \HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
