--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -1,16 +1,16 @@
 
 \input{GratitudeIntro.tex}
 
-%negative Visualisation 
+%% negative Visualisation 
 \hugeQuote{MDM_LOSS}{Certainly, if a man of understanding still has himself, he has lost nothing.}{}{Michel De Montaigne}{}{}
-\hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{\ldots and she may be gone tomorrow.}
+\hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, \say{I am kissing a mortal}}{Epictetus}{}{\ldots and she may be gone tomorrow.}
 \hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
 
 	Look at what you have, the things you value most and think how much you'd crave them 
 	if you didn't have them
 }{Marcus Aurelius}{RH_HMY}{}
 
-%Awe
+%% Awe
 \hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
 
 
