--- a/Leadership.tex
+++ b/Leadership.tex
@@ -47,7 +47,7 @@
 
 \hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
 
-\smallQuote{MR_CHIEF}{Kings soon perish who make a habit if justifying their actions to their subjects by saying "I have the power" rather than "it is my duty"}{Musonius Rufus}{} 
+\smallQuote{MR_CHIEF}{Kings soon perish who make a habit if justifying their actions to their subjects by saying \say{I have the power} rather than \say{it is my duty}}{Musonius Rufus}{} 
 
 \hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
@@ -68,7 +68,7 @@ Reward results}{BAML}{}{}
 
 
 
-\hugeQuote{MA_ASK}{Learn to ask of all actions}{, "why are they doing that?"\newline
+\hugeQuote{MA_ASK}{Learn to ask of all actions}{, \say{why are they doing that?}\newline
 Starting with your own.}{Marcus Aurelius}{H_RAZOR}{}
 
 
