--- a/Patience.tex
+++ b/Patience.tex
@@ -36,7 +36,7 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 \cleartoleftpage
 
 \hugeQuote{RG_TALK}{Once the words are out}{, you cannot take them back. Keep them under control.}{Robert Greene}{}{}
-\hugeQuote{RH_TALK}{The best advice I ever got}{ was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
+\hugeQuote{RH_TALK}{The best advice I ever got}{ was \say{shut up}}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
 \cleartorightpage
 \HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
 
