--- a/project.tex
+++ b/project.tex
@@ -11,6 +11,7 @@
 \usepackage{multicol}
 \usepackage{microtype}
 \usepackage{marginnote}
+\usepackage{dirtytalk}
 
 
 \titleformat{\chapter}[display]
