--- a/Action.tex
+++ b/Action.tex
@@ -23,7 +23,7 @@
 \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see}{Marcus Aurelius}{}
 
 \smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
-And don't go expecting Plato's "Republic" either, just be satisfied with even the smallest progress}{Marcus Aurelius}{}
+And don't go expecting Plato's \say{Republic} either, just be satisfied with even the smallest progress}{Marcus Aurelius}{}
 
 \cleartorightpage
 \hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it}{Rudy Guilliani}{BW_TALK}{}
