--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -5,7 +5,7 @@ As hard as it can be to take action, it's even harder to maintain the level of f
 
 When we do identify the right things, we still squander our time and energy. We're too polite, putting ourselves and our priorities to one side to avoid offending people (\S \ref{PL_DST}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (\S \ref{MA_SMALL}), we spend hours mindlessly scrolling around crappy sensationalist journalism when we could be reading an immersive novel (\S \ref{TP_BOOK}) or working on our beloved hobby (\S \ref{BB_PRACTICE}). 
 
-Epictetus reminds us that we need to gut things from our lives which take us away from the tricky but important business of improvement. We can be sure that nothing truly terrible will happen if we stop using social media. We can be confident that life will carry on if we leave the "mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}" to someone else. There are so many ways to spend our time, we need to be careful not to waste it and that can require significant effort. Asking ourselves whether what we're doing right now is truly important to us (\S \ref{MA_DL}) is an incredibly useful habit to develop.
+Epictetus reminds us that we need to gut things from our lives which take us away from the tricky but important business of improvement. We can be sure that nothing truly terrible will happen if we stop using social media. We can be confident that life will carry on if we leave \say{the mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}} to someone else. There are so many ways to spend our time, we need to be careful not to waste it and that can require significant effort. Asking ourselves whether what we're doing right now is truly important to us (\S \ref{MA_DL}) is an incredibly useful habit to develop.
 
 Maybe we should call someone who's important to us and focus soley on that for starters. 
 
