--- a/Generosity.tex
+++ b/Generosity.tex
@@ -29,10 +29,11 @@ Never attribute to malice that which can be adequately explained by incompetence
 \hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
 
-\hugeQuote{RH_HATE}{Because\ldots hate will get you every time}{\newline
+\hugeQuote{RH_HATE}{Because\ldots\newline
+hate will get you every time}{\newline
 Every time.}{Ryan Holiday}{}{}
 
-\hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself "you silly shit!"\newline
+\hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself \say{you silly shit!}\newline
 Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DWW}{}
 
 
