--- a/GratitudeIntro.tex
+++ b/GratitudeIntro.tex
@@ -3,7 +3,7 @@
 
 Just looking at the massively improbable set of circumstances needed to get us here in one piece we should be able to grab handfulls of gratitude from the air. We don't though, we take things for granted after a while. We forget quickly that we're lucky enough to be literate and high enough up Maslow's heirarchy of needs\llink{http://bit.ly/1BYf2Nd} to have time to focus on our better selves having ticked off the basics a long time ago. 
 
-It's not just the things we have already that we take for granted, it's someone taking extra effort on our behalf or extending an unexpected generosity to us. We become so cyncical that we expect others to be on the make or we sniffily say that they're "just doing their job".
+It's not just the things we have already that we take for granted, it's someone taking extra effort on our behalf or extending an unexpected generosity to us. We become so cyncical that we expect others to be on the make or we sniffily say that they're \say{just doing their job}.
 
 If we can't rely on ourselves to be  grateful, we need a little help to remind us and correct our course.
 
