--- a/ResilienceIntro.tex
+++ b/ResilienceIntro.tex
@@ -7,7 +7,7 @@ The challenges, of course, won't just come from us and our lapses in judgement o
 
 Picking ourselves up and dusting ourselves off needs to become second nature. We may be lucky enough to have support from others at times but we know we can't rely on that, we can only rely on what we control and that is nothing more than our response to what has happened.
 
-To reach our goals we don't need to be the best (\S \ref{RH_DESTROY}), and in our case it doesn't really make sense to "be the best" as we'll always be able to improve in some way, but we do need to keep at it and no matter what happens acting as though we were already the better person we want to be (\S \ref{MA_DWH}).
+To reach our goals we don't need to be the best (\S \ref{RH_DESTROY}), and in our case it doesn't really make sense to \say{be the best} as we'll always be able to improve in some way, but we do need to keep at it and no matter what happens acting as though we were already the better person we want to be (\S \ref{MA_DWH}).
 
 No matter what's happened, no matter what they've said, no matter what they've done; it's up to us how we react, it's up to us what happens next.
 
