--- a/Resilience.tex
+++ b/Resilience.tex
@@ -115,7 +115,7 @@ And always take note of Fortune's habit of behaving exactly as she pleases.}{Sen
 % Nothing can bring you peace but the triumph of principles}{Ralph Waldo Emerson}{}
 \smallQuote{LT_CH}{He who conquers others is strong, he who conquers himself is mighty.}{Lao Tzu}{}{}
 
-\smallQuote{H_TRAVEL}{It is reason and wisdom which take away cares not places affording views over the sea}{Horace}{}
+\smallQuote{H_TRAVEL}{It is reason and wisdom which take away cares not places affording views over the sea.}{Horace}{}
 
 \cleartorightpage
 \HugeQuote{A_ALONE}{Happiness depends on ourselves.}{}{Aristotle}{}{}
