add Epictetus quote

--- a/Learning.tex
+++ b/Learning.tex
@@ -41,6 +41,8 @@ Fewer interruptions, fewer conclusions.
 %cf bertrand russell learning/flowers
 \hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
 
+\hugeQuote{E_PIP}{If you didn't learn these things to put them into practice}{, what did you learn them for?}{Epictetus}{}{} 
+
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleartoleftpage
@@ -50,3 +52,7 @@ Fewer interruptions, fewer conclusions.
 
 \cleartorightpage
 \HugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
+
+%
+%%%%%%%%%%%%%%%%%%%%%%
+
