--- a/ActionIntro.tex
+++ b/ActionIntro.tex
@@ -5,12 +5,12 @@ The \emph{Pointers} here are not things to be mulled over and analysed in great 
 
 Without action of some kind our plans for improvement simply won't get very far. We need to look at the mammoth task in front of us and take that scary first step (and then the next). 
 Taking action isn't always easy and choosing the right move (\S \ref{JVG_ACT}) at the right time (\S \ref{ST_WAIT}) can be stupefyingly hard.
-The hope is though that we won't be paralysed and we will make an impact on the things important to us.
+The hope is though that we won't be paralysed and we will make a positive impact on the people and projects which are important to us.
 
-We won't be successful all the time (in particular I'm not even be successful much of the time) but by persevering (\S \ref{AR_HABIT} and \ref{JP_STAND}) we can chip away at the habits (and even relationships (\S \ref{LC_COMPANY})) that are slowing us down or even undoing good progress we've already made.
+We won't be successful all the time (there are sometimes periods weeks in which I'm not very successful on many fronts for much of the time) but by persevering (\S \ref{AR_HABIT} and \ref{JP_STAND}) we can chip away at the habits (and even relationships (\S \ref{LC_COMPANY})) that are slowing us down or even undoing good progress we've already made.
 
-We need to remember what's important to us. Remember how much time we have and how we choose to spend it. Marcus often looks at how little life he's been allotted (and how much he thinks he has left) and it's a good reminder for people like us to just get on with it.
+We need to remember what's important to us. Remember how much time we have and how we choose to spend it\llink{http://bit.ly/1OMUOuU}. Marcus often looks at how little life he's been allotted (and how much he thinks he has left). Although, as Seneca reminds us, it's not that we are allocated a short time, it's just that we are wasteful of the time we do have. It's a good reminder for people like us to just get on with things and not get too wrapped up in ourselves when things do go well. 
 
-We also need to remember that people will see where we spend our time and the choices made. No matter what we say they will believe what they see (and don't see). 
+We also need to keep in mind that people will see how we spend our time and the choices we made. We need to be honest with ourselves about what is important to us and what's not. No matter what we say they will believe what they see (and don't see). 
 
 }
