--- a/Generosity.tex
+++ b/Generosity.tex
@@ -19,12 +19,6 @@
 \end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
 
 
-%\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
-
-
-
-\HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
-Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
 \hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
@@ -45,6 +39,14 @@ Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DW
 
 \HugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
 %http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
+
+\HugeQuote{E_ISR}{It seemed right to him}{}{Epictetus}{}{}
+
+
+%\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
+
+\HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
+Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
 %Unsure on which chapter
 \hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
