--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,8 +1,5 @@
-
 \cleardoublepage
-
-\begin{multicols}{2}
-
+{\small
 We all want to be better people, shout at the kids less often, get some perspective at work and call our friends and family more. We have a picture of a better version of ourselves but we're still fallible, lazy, tired and busy. Best intentions fall away and we forget our better selves. 
 To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (\S \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step to focus the mind and make sure we know where we're going \footnote{Arthur Scopenhauer, \cite{SCM}} but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
 
@@ -15,4 +12,4 @@ The set of qualities we're looking to develop here are inspired in part by the M
 
 Good luck, and, as our trusted advisor Seneca would say, live well.
 
-\end{multicols}
+}
