--- a/Generosity.tex
+++ b/Generosity.tex
@@ -22,7 +22,6 @@
 %\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
 
 
-
 \HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
 Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
@@ -31,6 +30,8 @@ Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aureliu
 
 \hugeQuote{RH_HATE}{Because\ldots hate will get you every time}{\newline
 Every time.}{Ryan Holiday}{}{}
+%hugeQuote{KT_GTWF}{You're more than the three or four you'd go to war for.}{}{Kate Tempest}{}{} 
+%\smallQuote{they are just what we would be in their situation}{Abraham Lincoln}{}{} 
 
 \hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself "you silly shit!"\newline
 Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DWW}{}
