--- a/Resilience.tex
+++ b/Resilience.tex
@@ -78,7 +78,7 @@ It's only the imaginary ones that are unconquerable.}{Theodore N Vail}{UG_COUNT}
 
 \hugeQuote{MA_PROBLEMS}{External things are not the problem.}{ It's your assessment of them which you can erase right now.}{Marcus Aurelius}{}{}
 
-% \hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must}{Ryan Holiday}{}{}
+% \hugeQuote{RH_ENDURE}{See things for what they are,}{do what we can, endure what we must}{Ryan Holiday}{}{} % taken from schenhauer
 
 
 %% Endure
