add Epictetus quote.
Major find that had been half remembered

--- a/Patience.tex
+++ b/Patience.tex
@@ -24,7 +24,7 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 %TODO seneca at the door
 \hugeQuote{WG_JUDGE}{The senses don't decieve}{, judgement deceives.}{John Von Goethe}{}{}
 
-
+\hugeQuote{E_TTT}{Don't let the force of impressions knock you off your feet}{; just say to it \say{Just hold on a minute, let me see who you are and what you represent. Let m pit you to the test.}}{Epictetus}{}{}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%
 \cleartorightpage
