--- a/Learning.tex
+++ b/Learning.tex
@@ -13,6 +13,11 @@
 \cleartorightpage
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
 
+
+\smallQuote{HST_REACT}{
+Every reaction is a learning process; every significant experience alters your perspective.
+}{Hunter S. Thompson}{}
+
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
@@ -42,6 +47,8 @@ Fewer interruptions, fewer conclusions.
 \hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
 
 \hugeQuote{E_PIP}{If you didn't learn these things to put them into practice}{, what did you learn them for?}{Epictetus}{}{} 
+
+\hugeQuote{HST_NOBOAST}{I was not proud of what I had learned}{, but I never doubted that it was worth knowing.}{Hunter S. Thompson}{}{}
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
