add humanity quote

--- a/Generosity.tex
+++ b/Generosity.tex
@@ -22,6 +22,9 @@
 %\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
 
 
+%Roman playwright and poet Terence gave voice when he wrote: ‘I am human: nothing human is foreign to me’ 
+
+
 \HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
 Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
