add toa te Ching

--- a/Books.tex
+++ b/Books.tex
@@ -7,5 +7,6 @@
   \bibitem{T}    The Talmud - Norman Solomon - Penguin Classics
   \bibitem{EE}   Enchiridion - Epictetus - Dover thrift editions
   \bibitem{SCM}  Counsels and Maxims - Arthur Schopenhauer - Start Publishing
+  \bibitem{TTC} Tao Te Ching - Stephen Addiss and Stanley Lonbardo - Hackett Publishing 
 
 \end{thebibliography}
