clean up final comment

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -10,6 +10,6 @@ The hope here is that we can turn to this set of \emph{Pointers} at times when w
 The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life\llink{http://bit.ly/1XoP0tE}, the majority of content is helpful quotes and aphorisms picked up from books and the internet. If you find one good idea in these pages it will be directly attributable to them (\S \ref{TP_BOOK}). 
 %http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
 
-Good luck, and, as our trusted advisor Seneca would say, live well.
+Good luck and, as Seneca would say, live well.
 
 }
